# haskell-practice

./: README.md
adventofcode/: README.md
adventofcode/2015/day1/: floors.hs
adventofcode/2015/day4/: README.md
adventofcode/2015/day5/: README.md
adventofcode/2015/day6/: README.md
adventofcode/2016/day1/: main.hs
adventofcode/2016/day2/: main.hs
adventofcode/day4/: adventcoins.hs
adventofcode/day5/: nice_strings.hs
adventofcode/day6/: f  fire_hazard.hs
adventofcode/floors/: README.md
adventofcode/houses/: README.md  houses.hs
adventofcode/presents/: README.md  presents.hs
random/: caesar-cipher.hs
trello-svg/: trello-svg.cabal
trello-svg/app/: Main.hs
trello-svg/src/: TrelloSvg.hs
