name:                trello-svg
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jsteiner/trello-svg#readme
license:             BSD3
license-file:        LICENSE
author:              Josh Steiner
maintainer:          josh@jsteiner.me
copyright:           2016 Josh Steiner
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TrelloSvg
  build-depends:       base >= 4.7 && < 5
                     , text
                     , blaze-svg
  default-language:    Haskell2010

executable trello-svg
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , trello-svg
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jsteiner/trello-svg
